WIP dashboard, copyright, changelog

--- a/app/views/site/about.html.erb
+++ b/app/views/site/about.html.erb
@@ -16,6 +16,7 @@
     <li>Regione Lombardia</li>
     <li>Regione Piemonte</li>
     <li>Università degli Studi di Pavia</li>
+    <li>Politecnico di Milano</li>
   </ul>
 
   <p>Sviluppo dell'applicazione: Codex Società Cooperativa, Pavia</p>
