--- a/app/views/site/dashboard.html.erb
+++ b/app/views/site/dashboard.html.erb
@@ -74,12 +74,13 @@
 <div class="span2">
   <p>Soggetto coordinatore:</p>
   <ul class="thumbnails">
-    <li class="span2"><%= link_to_unless(APP_EDITION == "standalone", image_tag('logo-unipv.jpg'), 'http://www.unipv.eu') %></li>
+    <li class="span2"><%= link_to_unless(APP_EDITION == "standalone", image_tag('logo-polimi.jpg'), 'http://www.polimi.it') %></li>
   </ul>
 </div>
 
 <div class="span9">
-  <p>Il progetto di Archimista nasce da una convenzione tra Regione Lombardia, Regione Piemonte e Direzione Generale per gli Archivi, con il coinvolgimento di CSI Piemonte e Università degli Studi di Pavia. Archimista è sviluppato da Codex Società Cooperativa di Pavia.</p>
+  <p>Il progetto di Archimista nasce da una convenzione tra Regione Lombardia, Regione Piemonte e Direzione Generale per gli Archivi, con il coinvolgimento di CSI Piemonte e Università degli Studi di Pavia. A partire dalla versione 1.1.0 il soggetto coordinatore del progetto è il Politecnico di Milano.<p>
+  <p>Archimista è sviluppato da Codex Società Cooperativa di Pavia.</p>
   <p>Archimista viene rilasciato con licenza open source GPL nella prospettiva di incentivarne lo sviluppo e la crescita.</p>
   <p>Archimista è realizzato nel rispetto degli standard archivistici, dei parametri del SAN e di NIERA. Gestisce oggetti digitali, profili istituzionali e profili documentali, vocabolari e tesauri, oltre a schede speciali per fotografie, disegni, stampe e oggetti.</p>
   <p>Pur essendo un prodotto nuovo, Archimista si richiama alle esperienze di Sesamo e Guarini-Archivi.</p>
