--- a/app/views/reports/custodian.html.erb
+++ b/app/views/reports/custodian.html.erb
@@ -8,7 +8,7 @@
 <div class="span12">
 
   <div id="index-controls">
-    <%= link_to '<i class="icon-download-alt"></i> Genera RTF', custodian_report_path(@custodian, :format => "rtf"),  {:class => "rtf-custodian btn btn-small"}  %>
+    <%= link_to '<i class="icon-download-alt"></i> Genera RTF', custodian_report_path(@custodian, :format => "rtf"),  {:class => "rtf btn btn-small"}  %>
     <%= link_to '<i class="icon-download-alt"></i> Genera PDF', custodian_report_path(@custodian, :format => "pdf"),  {:class => "pdf btn btn-small"}  %>
   </div>
 
@@ -19,14 +19,13 @@
       <div>
         <p>
           <strong><%= Custodian.human_attribute_name(methods[0].to_sym) %></strong>
-          <br />
-          <% if attribute.include?('.') %>
-            <% text = @custodian.send(methods[0].to_sym).send(methods[1].to_sym).to_s %>
-          <% else %>
-            <% text = @custodian.send(attribute.to_sym).to_s %>
-          <% end %>
-          <%= simple_format(text) %>
         </p>
+        <% if attribute.include?('.') %>
+          <% text = @custodian.send(methods[0].to_sym).send(methods[1].to_sym).to_s %>
+        <% else %>
+          <% text = @custodian.send(attribute.to_sym).to_s %>
+        <% end %>
+        <%= textilize_with_entities(text) %>
       </div>
     <% end %>
   <% end %>
@@ -64,14 +63,13 @@
         <div>
           <p>
             <strong><%= Project.human_attribute_name(methods[0].to_sym) %></strong>
-            <br />
-            <% if attribute.include?('.') %>
-              <% text = project.send(methods[0].to_sym).send(methods[1].to_sym).to_s %>
-            <% else %>
-              <% text = project.send(attribute.to_sym).to_s %>
-            <% end %>
-            <%= simple_format(text) %>
           </p>
+          <% if attribute.include?('.') %>
+            <% text = project.send(methods[0].to_sym).send(methods[1].to_sym).to_s %>
+          <% else %>
+            <% text = project.send(attribute.to_sym).to_s %>
+          <% end %>
+          <%= textilize_with_entities(text) %>
         </div>
       <% end %>
     <% end %>
@@ -123,14 +121,13 @@
               <div>
                 <p>
                   <strong><%= Creator.human_attribute_name(methods[0].to_sym) %></strong>
-                  <br />
-                  <% if attribute.include?('.') %>
-                    <% text = creator.send(methods[0].to_sym).send(methods[1].to_sym).to_s %>
-                  <% else %>
-                    <% text = creator.send(attribute.to_sym).to_s %>
-                  <% end %>
-                  <%= simple_format(text) %>
                 </p>
+                <% if attribute.include?('.') %>
+                  <% text = creator.send(methods[0].to_sym).send(methods[1].to_sym).to_s %>
+                <% else %>
+                  <% text = creator.send(attribute.to_sym).to_s %>
+                <% end %>
+                <%= textilize_with_entities(text) %>
               </div>
             <% end %>
           <% end %>
@@ -162,14 +159,13 @@
           <div>
             <p>
               <strong><%= Fond.human_attribute_name(methods[0].to_sym) %></strong>
-              <br />
-              <% if attribute.include?('.') %>
-                <% text = fond.send(methods[0].to_sym).send(methods[1].to_sym).to_s %>
-              <% else %>
-                <% text = fond.send(attribute.to_sym).to_s %>
-              <% end %>
-              <%= simple_format(text) %>
             </p>
+            <% if attribute.include?('.') %>
+              <% text = fond.send(methods[0].to_sym).send(methods[1].to_sym).to_s %>
+            <% else %>
+              <% text = fond.send(attribute.to_sym).to_s %>
+            <% end %>
+            <%= textilize_with_entities(text) %>
           </div>
         <% end %>
       <% end %>
