--- a/app/views/reports/inventory.html.erb
+++ b/app/views/reports/inventory.html.erb
@@ -86,8 +86,10 @@
           <% @creator_printable_attributes.each do |attribute| %>
             <% methods = attribute.split('.') %>
             <% if creator.send(methods[0].to_sym).present? %>
+          <%# FIXME: hack provvisorio %>
+              <% string = methods[0].to_s == "history" ? "Profilo storico / Biografia" : t(methods[0]) %>
               <p>
-                <strong class="field-header"><%= t(methods[0]) %></strong>
+                <strong class="field-header"><%= string %></strong>
               </p>
               <% if attribute.include?('.') %>
                 <% text = creator.send(methods[0].to_sym).send(methods[1].to_sym).to_s %>
@@ -164,15 +166,20 @@
       <% if fond.units.present? %>
         <h3><%= Unit.human_name({:count => fond.units.size}) %></h3>
         <% fond.units.each do |u| %>
+          <% if u.reference_number.present? %>
+            <% u.tmp_reference_number = nil %>
+            <% u.tmp_reference_string = nil %>
+          <% end %>
+
+          <% if u.tmp_reference_number.present? %>
+            <% u.tmp_reference_string = nil %>
+          <% end %>
           <div class="unit pbi_avoid">
             <p class="head">
               <span class="pull-left"><strong><%= u.display_sequence_number_from_hash(@display_sequence_numbers) %></strong></span>
-              <span class="pull-right"><%= u.reference_number %></span>
+              <!--<span class="pull-right"><%#= u.reference_number %></span>-->
             </p>
             <h4><%= u.formatted_title %>
-              <% if u.preferred_event.present? %><br />
-                <span class="date"><em><%= u.preferred_event.full_display_date_with_place %></em></span>
-              <% end %>
             </h4>
             <% @unit_printable_attributes.each do |attribute| %>
               <% methods = attribute.split('.') %>
@@ -183,10 +190,13 @@
                   </p>
                   <% if attribute.include?('.') %>
                     <% text = u.send(methods[0].to_sym).send(methods[1].to_sym).to_s %>
+                    <% if(methods[0] == 'preferred_event') %>
+                      <% text.concat("\n#{u.send(methods[0].to_sym).send('note').to_s}") %>
+                    <% end %>
                   <% else %>
                     <% text = u.send(attribute.to_sym).to_s %>
                   <% end %>
-                  <%=  textilize_with_entities(text) %>
+                  <%=  methods[0] == 'reference_number' ? text : textilize_with_entities(text) %>
                 </div>
               <% end %>
             <% end %>
