units/show_iccd: fix missing display_sequence_number

--- a/app/views/units/show_iccd.html.erb
+++ b/app/views/units/show_iccd.html.erb
@@ -22,7 +22,7 @@
     </tr>
     <tr>
       <th><%= t('sequence_number') %></th>
-      <td><%= Unit.display_sequence_numbers_of(@root_fond)[@unit.id] %></td>
+      <td><%= @unit.display_sequence_number %></td>
     </tr>
     <tr>
       <th><%= t('unit_type') %></th>
