Fix ambiguous column name in ORDER BY clause (needed by SQLite3)

--- a/app/views/creators/index.html.erb
+++ b/app/views/creators/index.html.erb
@@ -27,7 +27,7 @@
       <tr>
         <th><%= sortable("name", t('creator_name')) %></th>
         <th><%= sortable("creator_type", t('creator_type')) %></th>
-        <th><%= sortable("updated_at", t('updated_at')) %></th>
+        <th><%= sortable("creators.updated_at", t('updated_at')) %></th>
         <th>&nbsp;</th>
         <th>&nbsp;</th>
       </tr>
