--- a/app/views/custodians/index.html.erb
+++ b/app/views/custodians/index.html.erb
@@ -20,7 +20,7 @@
     <thead>
     <tr>
       <th class="span8"><%= sortable("name", t('custodian_name')) %></th>
-      <th><%= sortable("updated_at", t('updated_at')) %></th>
+      <th><%= sortable("custodians.updated_at", t('updated_at')) %></th>
       <th>&nbsp;</th>
       <th>&nbsp;</th>
     </tr>
