groups/index: added assets file size

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -14,11 +14,12 @@
 </div>
 
 <div class="row">
-  <div class="span10">
+  <div class="span12">
     <table class="table table-sortable">
       <tr>
         <th><%= sortable("name", t('name')) %></th>
         <th class="center"><%= t('users_count') %></th>
+        <th class="center"><%= t('digital_objects') %></th>
         <th><%= sortable("created_at", t('created_at')) %></th>
         <th>&nbsp;</th>
       </tr>
@@ -26,6 +27,7 @@
       <tr>
         <td><%= link_to_unless(group.name == 'default', group.name, edit_group_path(group)) %></td>
         <td class="center"><%= group.users.count %></td>
+        <td class="center"><%= number_to_human_size(@assets[group.id]) || "&mdash;" %></td>
         <td><%= l group.created_at, :format => :long %></td>
         <td>
           <%= link_to_if(group.is_empty?, t('destroy'), group, :method => :delete) do |text| '' end %>
